fixed the issue not showing the start time or allowing the next page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,3 +115,8 @@ body {
   color: red;
 
 }
+
+.searchBox {
+  padding-right: 5%;
+}
+
